[tool.poetry]
name = "yet-another-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["albertocarot1 <acaroli1990@gmail.com>"]
readme = "README.md"
packages = [{include = "yet_another_sentiment_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.26.0"
datasets = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
