[tool.poetry]
name = "yet-another-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["albertocarot1 <acaroli1990@gmail.com>"]
readme = "README.md"
packages = [{include = "yet_another_sentiment_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
transformers = "^4.26.0"
datasets = "^2.9.0"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
wandb = "^0.13.10"
torch = "^1.13.1"
scipy = "^1.10.0"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
